# faa-pdf-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf/: read_pdf.py
