[project]
name = "pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
]

[project.scripts]
pdf = "pdf.read_pdf:extract_pdf_values"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
